--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "rest-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "REST Server con Express",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app",
     "lint": "eslint ."
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Cesar Villalobos Olmos",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
