--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "Cesar Villalobos Olmos",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.3.0",
     "prettier": "^2.8.8"
   },
   "devDependencies": {
