--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^7.0.1",
     "google-auth-library": "^8.8.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.43.0"
