--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app",
+    "dev": "nodemon app",
+    "start": "node app",
     "lint": "eslint ."
   },
   "keywords": [],
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "prettier": "^2.8.8",
+    "socket.io": "^4.7.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
